--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,82 @@
+
 body {
 	margin: 0;
 	padding: 0;
 	width: 100%;
 	height: 100vh;
+	font-family: 'Khula', sans-serif;
+}
+
+.search-bar {
+	display: flex;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+input {
+	color: black;
+	margin-left: 20px;
+	border: 3px solid #333;
+	padding: 5px;
+	height: 20px;
+	border-radius: 5px;
+	outline: none;
+	flex-grow: 2;
+
+}
+.search-bar a {
+    align-self: center;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+
+.results-container {
+	display: flex;
+	flex-flow: row wrap
+
+}
+
+.results {
+    box-sizing: border-box;
+	position: relative;
+	min-width: 0;
+	width: 25%;
+	padding: 10px;
+	overflow: hidden;
+	text-align: center;
+}
+.results h1 {
+    word-wrap: break-word;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	text-transform: uppercase;
+
+  	mix-blend-mode: darken;
+	color: green;
+	background: rgba (0,0,0,0.5);
+}
+.results h1:hover {
+	color: red;
+	cursor: pointer;
+}
+
+.results p {
+	background-color: rgba(0,0,0,0.5);
+	color: white;
+	mix-blend-mode: darken;
+	align-self: center;
+}
+
+.results img {
+	position: absolute;
+	left: 0;
+	top: 0;
+	max-width: 100%;
+	z-index: -1;
+	opacity: 0.5;
+}
+.results a {
+	cursor: pointer;
 }
